--- a/verifica/src/index.html
+++ b/verifica/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <p>loading...</p>
-  <app-root></app-root>
+  <p></p>
+  <app-root>loading..</app-root>
 </body>
 </html>
